--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule ".vim/bundle/vim-virtualenv"]
 	path = .vim/bundle/vim-virtualenv
 	url = https://github.com/jmcantrell/vim-virtualenv.git
+[submodule ".vim/bundle/bclose"]
+	path = .vim/bundle/bclose
+	url = https://github.com/rbgrouleff/bclose.vim.git
