--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule ".vim/bundle/nerdtree-git"]
 	path = .vim/bundle/nerdtree-git
 	url = https://github.com/Xuyuanp/nerdtree-git-plugin.git
+[submodule ".vim/bundle/fakeclip"]
+	path = .vim/bundle/fakeclip
+	url = https://github.com/kana/vim-fakeclip.git
