--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule ".vim/bundle/fakeclip"]
 	path = .vim/bundle/fakeclip
 	url = https://github.com/kana/vim-fakeclip.git
+[submodule ".vim/bundle/python-indent"]
+	path = .vim/bundle/python-indent
+	url = https://github.com/hynek/vim-python-pep8-indent.git
