--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule ".vim/bundle/fugitive"]
 	path = .vim/bundle/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule ".vim/bundle/railscasts-theme"]
+	path = .vim/bundle/railscasts-theme
+	url = git@github.com:jpo/vim-railscasts-theme.git
