Changed railscasts theme url to https

--- a/.gitmodules
+++ b/.gitmodules
@@ -72,4 +72,4 @@
 	url = https://github.com/tpope/vim-fugitive.git
 [submodule ".vim/bundle/railscasts-theme"]
 	path = .vim/bundle/railscasts-theme
-	url = git@github.com:jpo/vim-railscasts-theme.git
+	url = https://github.com/jpo/vim-railscasts-theme.git
